[gd_scene load_steps=7 format=3 uid="uid://mshkucx6t227"]

[ext_resource type="Script" path="res://1_scenes/6_ui/1_hud/health_display.gd" id="1_fogtu"]
[ext_resource type="Texture2D" uid="uid://b5pqhqmm6v1ss" path="res://assets/health bar/health_bar1.png" id="1_uwyyj"]
[ext_resource type="Texture2D" uid="uid://hdkhuqft4d86" path="res://assets/health bar/health_bar2.png" id="2_ma5av"]
[ext_resource type="Texture2D" uid="uid://brth5qopckdqt" path="res://assets/health bar/health_bar3.png" id="3_rkhgf"]
[ext_resource type="Texture2D" uid="uid://dhl4rek0yyj7s" path="res://assets/health bar/health_bar4.png" id="4_jqxxf"]
[ext_resource type="Texture2D" uid="uid://d22bnsiyfr33x" path="res://assets/health bar/health_bar5.png" id="5_4ohyu"]

[node name="HealthBarContainer" type="Control"]
custom_minimum_size = Vector2(320, 32)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fogtu")

[node name="HealthBar1" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 320.0
offset_bottom = 32.0
texture = ExtResource("1_uwyyj")
expand_mode = 1

[node name="HealthBar2" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 320.0
offset_bottom = 32.0
texture = ExtResource("2_ma5av")
expand_mode = 1

[node name="HealthBar3" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 320.0
offset_bottom = 32.0
texture = ExtResource("3_rkhgf")
expand_mode = 1

[node name="HealthBar4" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 320.0
offset_bottom = 32.0
texture = ExtResource("4_jqxxf")
expand_mode = 1

[node name="HealthBar5" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 320.0
offset_bottom = 32.0
texture = ExtResource("5_4ohyu")
expand_mode = 1
